--- a/html/overview.html
+++ b/html/overview.html
@@ -365,6 +365,85 @@
                             </div>
                         </div>
                     </div>
+                    <div class="card form-group">
+                        <div class="card-header">Member in alliance</div>
+                        <div class="card-content p-2">
+                            <table class="table table-border cell-border">
+                                <tbody>
+                                    <tr>
+                                        <td id="MemberName0">&nbsp;</td>
+                                        <td id="MemberName1">&nbsp;</td>
+                                        <td id="MemberName2">&nbsp;</td>
+                                        <td id="MemberName3">&nbsp;</td>
+                                        <td id="MemberName4">&nbsp;</td>
+                                    </tr>
+                                    <tr>
+                                        <td id="MemberName5">&nbsp;</td>
+                                        <td id="MemberName6">&nbsp;</td>
+                                        <td id="MemberName7">&nbsp;</td>
+                                        <td id="MemberName8">&nbsp;</td>
+                                        <td id="MemberName9">&nbsp;</td>
+                                    </tr>
+                                    <tr>
+                                        <td id="MemberName10">&nbsp;</td>
+                                        <td id="MemberName11">&nbsp;</td>
+                                        <td id="MemberName12">&nbsp;</td>
+                                        <td id="MemberName13">&nbsp;</td>
+                                        <td id="MemberName14">&nbsp;</td>
+                                    </tr>
+                                    <tr>
+                                        <td id="MemberName15">&nbsp;</td>
+                                        <td id="MemberName16">&nbsp;</td>
+                                        <td id="MemberName17">&nbsp;</td>
+                                        <td id="MemberName18">&nbsp;</td>
+                                        <td id="MemberName19">&nbsp;</td>
+                                    </tr>
+                                    <tr>
+                                        <td id="MemberName20">&nbsp;</td>
+                                        <td id="MemberName21">&nbsp;</td>
+                                        <td id="MemberName22">&nbsp;</td>
+                                        <td id="MemberName23">&nbsp;</td>
+                                        <td id="MemberName24">&nbsp;</td>
+                                    </tr>
+                                    <tr>
+                                        <td id="MemberName25">&nbsp;</td>
+                                        <td id="MemberName26">&nbsp;</td>
+                                        <td id="MemberName27">&nbsp;</td>
+                                        <td id="MemberName28">&nbsp;</td>
+                                        <td id="MemberName29">&nbsp;</td>
+                                    </tr>
+                                    <tr>
+                                        <td id="MemberName30">&nbsp;</td>
+                                        <td id="MemberName31">&nbsp;</td>
+                                        <td id="MemberName32">&nbsp;</td>
+                                        <td id="MemberName33">&nbsp;</td>
+                                        <td id="MemberName34">&nbsp;</td>
+                                    </tr>
+                                    <tr>
+                                        <td id="MemberName35">&nbsp;</td>
+                                        <td id="MemberName36">&nbsp;</td>
+                                        <td id="MemberName37">&nbsp;</td>
+                                        <td id="MemberName38">&nbsp;</td>
+                                        <td id="MemberName39">&nbsp;</td>
+                                    </tr>
+                                    <tr>
+                                        <td id="MemberName40">&nbsp;</td>
+                                        <td id="MemberName41">&nbsp;</td>
+                                        <td id="MemberName42">&nbsp;</td>
+                                        <td id="MemberName43">&nbsp;</td>
+                                        <td id="MemberName44">&nbsp;</td>
+                                    </tr>
+                                    <tr>
+                                        <td id="MemberName45">&nbsp;</td>
+                                        <td id="MemberName46">&nbsp;</td>
+                                        <td id="MemberName47">&nbsp;</td>
+                                        <td id="MemberName48">&nbsp;</td>
+                                        <td id="MemberName49">&nbsp;</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
                 <div id="ContentSettingsServer">
                     <button id="ButtonOptimizeAllTables" class="button primary" onclick="optimizeAllTables();"><span class="mif-table"></span> <span id="OptimizeAllTables" class="trans-innerHTML"></span></button>
