--- a/html/overview.html
+++ b/html/overview.html
@@ -339,7 +339,7 @@
                 </div>
                 <div id="ContentSettingsAlliance">
                     <h3>Alliance-Settings</h3>
-                    <div class="card form-group">
+                    <div class="card form-group" id="DivChangeNeededMemberRole">
                         <div class="card-header">Needed MemberRole to view other AllianceMember</div>
                         <div class="card-content p-2">
                             <div class="form-group">
@@ -354,7 +354,7 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <button id="ButtonCancelChangeNeededMemberRole" class="button alert" onclick="manageContentSettingsAlliance();"><i class="fas fa-times"></i> Cancel</button>
+                                <button id="ButtonCancelChangeNeededMemberRole" class="button alert" onclick="manageContentSettingsAlliance(true);"><i class="fas fa-times"></i> Cancel</button>
                                 <button id="ButtonSaveChangeNeededMemberRole" class="button success" onclick="saveChangeNeededMemberRole();"><i class="fas fa-check"></i> Save</button>
                             </div>
                             <div class="form-group p-3 bg-red fg-white d-none" id="MemberRoleChangeFail">
@@ -365,7 +365,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card form-group">
+                    <div class="card form-group" id="DivTableMemberInAlliance">
                         <div class="card-header">Member in alliance</div>
                         <div class="card-content p-2">
                             <table class="table table-border cell-border">
@@ -443,6 +443,9 @@
                                 </tbody>
                             </table>
                         </div>
+                    </div>
+                    <div class="form-group p-3 bg-red fg-white d-none" id="ErrorPermissionPage">
+                        <span><b>Error!</b> You do not have permission to view that page.</span>
                     </div>
                 </div>
                 <div id="ContentSettingsServer">
