added substitution to TableAllianceMembers

--- a/html/overview.html
+++ b/html/overview.html
@@ -179,6 +179,7 @@
                         <input type="checkbox" data-role="checkbox" checked onchange="manageContentAllianceMembers(true)" data-caption="CPMax">
                         <input type="checkbox" data-role="checkbox" checked onchange="manageContentAllianceMembers(true)" data-caption="CPCur">
                         <input type="checkbox" data-role="checkbox" checked onchange="manageContentAllianceMembers(true)" data-caption="Funds">
+                        <input type="checkbox" data-role="checkbox" checked onchange="manageContentAllianceMembers(true)" data-caption="Substitution">
                     </div>
                     <div style="overflow-x: auto;">
                         <table id="TableAllianceMembers"
@@ -219,6 +220,7 @@
                                 <th class="sortable-column text-center" data-format="number">CPMax</th>
                                 <th class="sortable-column text-center" data-format="number">CPCur</th>
                                 <th class="sortable-column text-center" data-format="number">Funds</th>
+                                <th class="sortable-column">Substitution</th>
                             </thead>
                         </table>
                     </div>
