added Link to FlightGame on StartPage

--- a/html/login.html
+++ b/html/login.html
@@ -52,7 +52,8 @@
                     </div>
                 </form>
                 <label>BaseScanner-Website: <a href="BaseScanner/" target="_blank">https://cnc.indyserver.info/BaseScanner/</a></label><br/>
-                <label>BaseScanner-Script: <a href="BaseScanner/js/BaseScanner.min.user.js" target="_blank">https://cnc.indyserver.info/BaseScanner/js/BaseScanner.min.user.js</a></label>
+                <label>BaseScanner-Script: <a href="BaseScanner/js/BaseScanner.min.user.js" target="_blank">https://cnc.indyserver.info/BaseScanner/js/BaseScanner.min.user.js</a></label><br/>
+				<label>FlightGame (Just 4 Fun): <a href="FlightGame/" target="_blank">https://cnc.indyserver.info/FlightGame/</a></label><br/>
             </div>
         </div>
         <div class="modal fade" id="ModalScriptDownload">
