--- a/html/login.html
+++ b/html/login.html
@@ -10,12 +10,12 @@
 
 		<!-- JavaScript -->
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script> <!-- jQuery -->
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script> <!-- Bootstrap -->
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script> <!-- Bootstrap -->
 		<script src="js/login.js?20180603"></script> <!-- alles eigene -->
 
 		<!-- CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"> <!-- Bootstrap -->
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css"> <!-- FontAwesome -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> <!-- Bootstrap -->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css"> <!-- FontAwesome -->
 		<link rel="stylesheet" href="css/own.css?20180603"> <!-- alles eigene -->
 	</head>
 	<body>
@@ -45,9 +45,9 @@
                         <b>Error!</b> Database is not available.
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="btn btn-success"><span class="fas fa-sign-in-alt"></span> Login</button>
-                        <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#ModalScriptDownload"><span class="fas fa-download"></span> Script</button>
-                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ModalScriptDownload"><span class="fas fa-question-circle"></span> Help / Information</button>
+                        <button type="submit" class="btn btn-success"><span class="fas fa-sign-in-alt"></span> Login</button>&nbsp;
+                        <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#ModalScriptDownload"><span class="fas fa-download"></span> Script</button>&nbsp;
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ModalScriptDownload"><span class="fas fa-question-circle"></span> Help / Information</button>&nbsp;
                         <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#ModalContact"><span class="fas fa-envelope"></span> Contact</button>
                     </div>
                 </form>
