added Link to BaseScanner when logged in

--- a/html/overview.html
+++ b/html/overview.html
@@ -70,6 +70,9 @@
                     <li class="nav-item">
                         <a id="TabSettings" class="nav-link" onclick="updateCurrentDatasInView();"><i class="fas fa-sync"></i></a>
                     </li>
+                    <li class="nav-item">
+                        <a id="TabSettings" class="nav-link" href="/BaseScanner/" target="_blank"><i class="fas fa-globe"></i> BaseScanner</a>
+                    </li>
                 </ul><br/>
                 <div class="row">
                     <div id="DivDropDownListWorld" class="col-md-3 form-group" onchange="prepareandFillDropDownListDataAlliance(true);">
