updated missing space in local version

--- a/html/overview.html
+++ b/html/overview.html
@@ -225,7 +225,7 @@
                                 <div id="AdminButtonsPlayer" class="d-none">
                                     <h3>Admin-Settings</h3>
                                     <div class="form-group">
-                                        <button id="ButtonResetPlayer" class="btn btn-warning" onclick="resetPlayer();"><i class="fas fa-sync"></i> reset Player</button>
+                                        <button id="ButtonResetPlayer" class="btn btn-warning" onclick="resetPlayer();"><i class="fas fa-sync"></i> reset Player</button>&nbsp;
                                         <button id="ButtonDeletePlayer" class="btn btn-danger" onclick="deletePlayer();"><i class="fas fa-user-times"></i> delete Player</button>
                                     </div>
                                 </div>
