added hidden inputfield for copy to clipboard

--- a/BaseScanner/index.html
+++ b/BaseScanner/index.html
@@ -30,5 +30,6 @@
         <br/>
         <label id="LoginState"></label><br/>
         <div id="Scans"></div>
+        <input id="InputCoords" type="text" hidden>
     </body>
 </html>
