click on BaseScanner --> correct WorldId
- removed link to BaseScanner on login-page
- click on BaseScanner --> correct WorldId

--- a/html/login.html
+++ b/html/login.html
@@ -11,12 +11,12 @@
 		<!-- JavaScript -->
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script> <!-- jQuery -->
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script> <!-- Bootstrap -->
-		<script src="js/login.js?20180603"></script> <!-- alles eigene -->
+		<script src="js/login.min.js?20180603"></script> <!-- alles eigene -->
 
 		<!-- CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> <!-- Bootstrap -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css"> <!-- FontAwesome -->
-		<link rel="stylesheet" href="css/own.css?20180603"> <!-- alles eigene -->
+		<link rel="stylesheet" href="css/own.min.css?20180603"> <!-- alles eigene -->
 	</head>
 	<body>
         <div class="jumbotron text-center">
@@ -52,7 +52,6 @@
                     </div>
                 </form>
                 <label>BaseScanner-Website: <a href="BaseScanner/" target="_blank">https://cnc.indyserver.info/BaseScanner/</a></label><br/>
-                <label>BaseScanner-Script: <a href="BaseScanner/js/BaseScanner.min.user.js" target="_blank">https://cnc.indyserver.info/BaseScanner/js/BaseScanner.min.user.js</a></label><br/>
 				<label>FlightGame (Just 4 Fun): <a href="FlightGame/" target="_blank">https://cnc.indyserver.info/FlightGame/</a></label><br/>
             </div>
         </div>
