--- a/html/overview.html
+++ b/html/overview.html
@@ -16,13 +16,13 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/alasql/0.5.3/alasql.min.js"></script> <!-- alasql -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.4/xlsx.core.min.js"></script> <!-- .xlsx-Export -->
         <script src="https://www.gstatic.com/charts/loader.js"></script> <!-- GoogleChart -->      
-		<script src="js/overview.js?20180717"></script> <!-- alles eigene -->
+		<script src="js/overview.min.js?20180717"></script> <!-- alles eigene -->
 
 		<!-- CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> <!-- Bootstrap -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css"> <!-- FontAwesome -->
         <link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css"> <!-- DataTable -->
-		<link rel="stylesheet" href="css/own.css?20180603"> <!-- alles eigene -->
+		<link rel="stylesheet" href="css/own.min.css?20180603"> <!-- alles eigene -->
 	</head>
 	<body>
         <div class="jumbotron text-center">
@@ -68,10 +68,10 @@
                         <a id="TabSettings" class="nav-link" data-toggle="tab" href="#ContentSettings" onclick="prepareTabSettings();"><i class="fas fa-cogs"></i> Settings</a>
                     </li>
                     <li class="nav-item">
-                        <a id="TabSettings" class="nav-link" onclick="updateCurrentDatasInView();"><i class="fas fa-sync"></i></a>
+                        <a id="TabReload" class="nav-link" onclick="updateCurrentDatasInView();"><i class="fas fa-sync"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a id="TabSettings" class="nav-link" href="/BaseScanner/" target="_blank"><i class="fas fa-globe"></i> BaseScanner</a>
+                        <a id="TabBaseScanner" class="nav-link" href="/BaseScanner/" target="_blank"><i class="fas fa-globe"></i> BaseScanner</a>
                     </li>
                 </ul><br/>
                 <div class="row">
