--- a/BaseScanner/index.html
+++ b/BaseScanner/index.html
@@ -7,11 +7,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- CSS -->
-        <link rel="stylesheet" href="css/own.min.css">
+        <link rel="stylesheet" href="css/own.min.css?20200130">
 
         <!-- JavaScript -->
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-        <script src="js/own.min.js"></script>
+        <script src="js/own.min.js?20200130"></script>
     </head>
     <body>
         <button onclick="getLayoutsOrderByType('Tiberium');">Tiberium</button>
