filter for TibFields [html]

--- a/BaseScanner/index.html
+++ b/BaseScanner/index.html
@@ -7,11 +7,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- CSS -->
-        <link rel="stylesheet" href="css/own.min.css?20200130">
+        <link rel="stylesheet" href="css/own.min.css?20200205">
 
         <!-- JavaScript -->
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-        <script src="js/own.min.js?20200130"></script>
+        <script src="js/own.min.js?20200205"></script>
     </head>
     <body>
         <button onclick="getLayoutsOrderByType('Tiberium');">Tiberium</button>
@@ -26,6 +26,13 @@
         <label>MaxY:</label><input id="MaxY" size="4">
         <label>MinDate:</label><input id="MinDate" size="8">
         <label>PlayerName:</label><input id="PlayerName" size="15">
+        <label>FieldsTib:</label>
+        <select id="FieldsTib">
+            <option value="" selected>--</option>
+            <option>5</option>
+            <option>6</option>
+            <option>7</option>
+        </select>
         <!--<label>AllianceName:</label><select id="SelectionAllianceName"></select>-->
         <br/>
         <label id="LoginState"></label><br/>
