--- a/BaseScanner/index.html
+++ b/BaseScanner/index.html
@@ -14,18 +14,18 @@
         <script src="js/own.min.js?20200205"></script>
     </head>
     <body>
-        <button onclick="getLayoutsOrderByType('Tiberium');">Tiberium</button>
-        <button onclick="getLayoutsOrderByType('Crystal');">Crystal</button>
-        <button onclick="getLayoutsOrderByType('Mixed');">Mixed</button>
-        <button onclick="getLayoutsOrderByType('Power');">Power</button>
-        <button onclick="getLayoutsOrderByType('Date');">Date</button>
-        <label>WorldId:</label><input id="WorldId" value="320" size="4">
-        <label>MinX:</label><input id="MinX" size="4">
-        <label>MaxX:</label><input id="MaxX" size="4">
-        <label>MinY:</label><input id="MinY" size="4">
-        <label>MaxY:</label><input id="MaxY" size="4">
-        <label>MinDate:</label><input id="MinDate" size="8">
-        <label>PlayerName:</label><input id="PlayerName" size="15">
+        <button onclick="getLayoutsOrderByType('Tiberium');">Tiberium</button>&nbsp;
+        <button onclick="getLayoutsOrderByType('Crystal');">Crystal</button>&nbsp;
+        <button onclick="getLayoutsOrderByType('Mixed');">Mixed</button>&nbsp;
+        <button onclick="getLayoutsOrderByType('Power');">Power</button>&nbsp;
+        <button onclick="getLayoutsOrderByType('Date');">Date</button>&nbsp;
+        <label>WorldId:</label><input id="WorldId" value="320" size="4">&nbsp;
+        <label>MinX:</label><input id="MinX" size="4">&nbsp;
+        <label>MaxX:</label><input id="MaxX" size="4">&nbsp;
+        <label>MinY:</label><input id="MinY" size="4">&nbsp;
+        <label>MaxY:</label><input id="MaxY" size="4">&nbsp;
+        <label>MinDate:</label><input id="MinDate" size="8">&nbsp;
+        <label>PlayerName:</label><input id="PlayerName" size="15">&nbsp;
         <label>FieldsTib:</label>
         <select id="FieldsTib">
             <option value="" selected>--</option>
