added BasePoints [html]

--- a/html/login.html
+++ b/html/login.html
@@ -133,6 +133,7 @@
                                             <ul><b>Bases</b>
                                                 <li>BaseId (for uniquely identify)</li>
                                                 <li>BaseName</li>
+                                                <li>BasePoints</li>
                                                 <li>Productions (Tiberium, Crystal, Energy, Credits)</li>
                                                 <li>BaseValues (BaseLevel, DefenseLevel, OffenseLevel, Support-Level und -Art)</li>
                                                 <li>CnC-Opts of Bases</li>
@@ -220,6 +221,7 @@
                                             <ul><b>Basen</b>
                                                 <li>BasisId (zur eindeutigen Identifizierung)</li>
                                                 <li>Basisname</li>
+                                                <li>Basispunkte</li>
                                                 <li>Produktionen (Tiberium, Kristall, Strom, Credits)</li>
                                                 <li>Basenwerte (Basenlevel, Defensivlevel, Offensivlevel, Support-Level und -Art)</li>
                                                 <li>CnC-Opts der Basen</li>
