--- a/html/login.html
+++ b/html/login.html
@@ -9,14 +9,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!-- JavaScript -->
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script> <!-- jQuery -->
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> <!-- jQuery -->
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script> <!-- Bootstrap -->
-		<script src="js/login.min.js?20180603"></script> <!-- alles eigene -->
+		<script src="js/login.min.js?20200207"></script> <!-- alles eigene -->
 
 		<!-- CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> <!-- Bootstrap -->
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css"> <!-- FontAwesome -->
-		<link rel="stylesheet" href="css/own.min.css?20180603"> <!-- alles eigene -->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"> <!-- FontAwesome -->
+		<link rel="stylesheet" href="css/own.min.css?20200207"> <!-- alles eigene -->
 	</head>
 	<body>
         <div class="jumbotron text-center">
@@ -52,7 +52,8 @@
                     </div>
                 </form>
                 <label>BaseScanner-Website: <a href="BaseScanner/" target="_blank">https://cnc.indyserver.info/BaseScanner/</a></label><br/>
-				<label>FlightGame (Just 4 Fun): <a href="FlightGame/" target="_blank">https://cnc.indyserver.info/FlightGame/</a></label><br/>
+                <label>FlightGame (Just 4 Fun): <a href="FlightGame/" target="_blank">https://cnc.indyserver.info/FlightGame/</a></label><br/>
+                <label>WhatsApp-Group: <a href="https://chat.whatsapp.com/G43Za9dMxK9I2fBOwJRnZW" target="_blank">https://chat.whatsapp.com/G43Za9dMxK9I2fBOwJRnZW</a></label><br/>
             </div>
         </div>
         <div class="modal fade" id="ModalScriptDownload">
