--- a/html/login.html
+++ b/html/login.html
@@ -11,12 +11,12 @@
 		<!-- JavaScript -->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> <!-- jQuery -->
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script> <!-- Bootstrap -->
-		<script src="js/login.min.js?20200207"></script> <!-- alles eigene -->
+		<script src="js/login.min.js?20200209"></script> <!-- alles eigene -->
 
 		<!-- CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> <!-- Bootstrap -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"> <!-- FontAwesome -->
-		<link rel="stylesheet" href="css/own.min.css?20200207"> <!-- alles eigene -->
+		<link rel="stylesheet" href="css/own.min.css?20200209"> <!-- alles eigene -->
 	</head>
 	<body>
         <div class="jumbotron text-center">
@@ -130,6 +130,7 @@
                                                 <li>RepairTime-Storage</li>
                                                 <li>incoming and outgoing substitutions</li>
                                                 <li>Funds</li>
+                                                <li>Battlereports</li>
                                             </ul>
                                             <ul><b>Bases</b>
                                                 <li>BaseId (for uniquely identify)</li>
@@ -218,6 +219,7 @@
                                                 <li>Repzeit-Speicher</li>
                                                 <li>eingehende, ausgehende UV's</li>
                                                 <li>Funds</li>
+                                                <li>Kampfberichte</li>
                                             </ul>
                                             <ul><b>Basen</b>
                                                 <li>BasisId (zur eindeutigen Identifizierung)</li>
