test for Alliance (Shoot, PvP, PvE)
- backend done
- Script working?

--- a/html/overview.html
+++ b/html/overview.html
@@ -50,7 +50,7 @@
                         <a id="TabAllianceMembers" class="nav-link" data-toggle="tab" href="#ContentAllianceMembers" onclick="prepareTabAllianceMembers();"><i class="fas fa-users"></i> Members</a>
                     </li>
                     <li class="nav-item">
-                        <a id="TabAlliance" class="nav-link" data-toggle="tab" href="#ContentAlliance" onclick="prepareTabAlliance();"i class="fas fa-chart-line"></i> Alliance</a>
+                        <a id="TabAlliance" class="nav-link" data-toggle="tab" href="#ContentAlliance" onclick="prepareTabAlliance();"><i class="fas fa-chart-line"></i> Alliance</a>
                     </li>
                     <li class="nav-item">
                         <a id="TabAllianceBase" class="nav-link" data-toggle="tab" href="#ContentAllianceBase" onclick="prepareTabAllianceBase();"><i class="fas fa-home"></i> Alliance - Bases</a>
