--- a/html/login.html
+++ b/html/login.html
@@ -11,12 +11,12 @@
 		<!-- JavaScript -->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> <!-- jQuery -->
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script> <!-- Bootstrap -->
-		<script src="js/login.min.js?20200209"></script> <!-- alles eigene -->
+		<script src="js/login.min.js?20200225"></script> <!-- alles eigene -->
 
 		<!-- CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> <!-- Bootstrap -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"> <!-- FontAwesome -->
-		<link rel="stylesheet" href="css/own.min.css?20200209"> <!-- alles eigene -->
+		<link rel="stylesheet" href="css/own.min.css?20200225"> <!-- alles eigene -->
 	</head>
 	<body>
         <div class="jumbotron text-center">
@@ -148,6 +148,7 @@
                                                 <li>EventRank (affects VeteranServer)</li>
                                                 <li>VeteranPoints (affects VeteranServer)</li>
                                                 <li>VeteranPoints per hour (affects VeteranServer)</li>
+                                                <li>shot PvP- and PvE-Bases</li>
                                                 <li>AllianceBoni (Ressources, Procents, Points and Rank)</li>
                                             </ul>
                                         </p>
@@ -235,6 +236,7 @@
                                                 <li>Allianzname</li>
                                                 <li>Rang</li>
                                                 <li>EventRang (betrifft Veteranen-Server)</li>
+                                                <li>geschossene PvP- und PvE-Basen</li>
                                                 <li>Veteranen-Punkte (betrifft Veteranen-Server)</li>
                                                 <li>Veteranen-Punkte pro Stunde (betrifft Veteranen-Server)</li>
                                                 <li>Allianz-Boni (Ressourcen, Prozente, Punkte und Rang)</li>
